--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,11 @@
     <string name="title_mess_menu">MessMenu.pdf</string>
     <string name="description_downloading_file">Downloading file</string>
     <string name="download_started">Download started</string>
+    <string name="mess_poll_id">pollId</string>
+    <string name="user_is_Logged_In">isLoggedIn</string>
+    <string name="ayush_yadav">ayushyadav</string>
+    <string name="suffix_iiitl.ac.in"><![CDATA[iiitl.ac.in]]></string>
+    <string name="user">user</string>
+    <string name="update">update</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
