--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="user">user</string>
     <string name="update">update</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="razorpay_key">rzp_live_pEv2OERPEj1yaT</string>
 </resources>
