--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_know_our_team">Know our team\n</string>
-    <string name="demolunch">Aytush yadav is very good.</string>
+    <string name="demolunch">Marry had a little lamb.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="empty_field">This field cannot be empty!</string>
     <string name="select_year">Please Select a year</string>
